--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,25 +1,19 @@
 {
     "address": {
-        "1.1": "tcp://127.0.0.1:1735",
-        "1.2": "tcp://127.0.0.1:1736",
-        "1.3": "tcp://127.0.0.1:1737",
-        "2.1": "tcp://127.0.0.1:1738",
-        "2.2": "tcp://127.0.0.1:1739",
-        "2.3": "tcp://127.0.0.1:1740",
-        "3.1": "tcp://127.0.0.1:1741",
-        "3.2": "tcp://127.0.0.1:1742",
-        "3.3": "tcp://127.0.0.1:1743"
+        "vm00": "tcp://vm00:1735",
+        "vm01": "tcp://vm01:1736",
+        "vm02": "tcp://vm02:1737",
+        "vm03": "tcp://vm03:1738",
+        "vm04": "tcp://vm04:1739",
+        "vm05": "tcp://vm05:1740"
     },
     "http_address": {
-        "1.1": "http://127.0.0.1:8080",
-        "1.2": "http://127.0.0.1:8081",
-        "1.3": "http://127.0.0.1:8082",
-        "2.1": "http://127.0.0.1:8083",
-        "2.2": "http://127.0.0.1:8084",
-        "2.3": "http://127.0.0.1:8085",
-        "3.1": "http://127.0.0.1:8086",
-        "3.2": "http://127.0.0.1:8087",
-        "3.3": "http://127.0.0.1:8088"
+        "vm00": "http://vm00:8080",
+        "vm01": "http://vm01:8081",
+        "vm02": "http://vm02:8082",
+        "vm03": "http://vm03:8083",
+        "vm04": "http://vm04:8084",
+        "vm05": "http://vm05:8085"
     },
     "policy": "majority",
     "threshold": 3,
